[gd_scene load_steps=7 format=3 uid="uid://ddb40k4f8ru"]

[ext_resource type="Script" uid="uid://ccfon5efqghjs" path="res://scripts/PlayerIndicator.gd" id="1_exqhj"]
[ext_resource type="Texture2D" uid="uid://b27e0qa74bp18" path="res://assets/new/panel.jpeg" id="2_yxp1o"]
[ext_resource type="Texture2D" uid="uid://65yd8sdf26xo" path="res://assets/new/panel-hollow.png" id="3_hyna8"]
[ext_resource type="FontFile" uid="uid://bn750cur0q168" path="res://assets/Daydream.ttf" id="3_xvnoy"]
[ext_resource type="Texture2D" uid="uid://dwasmdm71xblg" path="res://assets/new/stash.png" id="4_hyna8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_PlayerIndicatorPanel"]

[node name="PlayerIndicator" type="Control"]
custom_minimum_size = Vector2(160, 190)
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 190.0
script = ExtResource("1_exqhj")

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(600, 550)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 41.0
offset_right = 1510.0
offset_bottom = 811.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_yxp1o")
region_rect = Rect2(0, 0, 1024, 1024)
patch_margin_left = 256
patch_margin_top = 256
patch_margin_right = 256
patch_margin_bottom = 256
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CharacterPortrait" type="TextureRect" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
offset_left = 15.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 132.0
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 151.0
offset_right = 2.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_PlayerIndicatorPanel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerIDLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_xvnoy")
theme_override_font_sizes/font_size = 10
text = "Jogador X"
horizontal_alignment = 1

[node name="StashHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StashIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/StashHBox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("4_hyna8")
expand_mode = 1
stretch_mode = 5

[node name="StashAmountLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StashHBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_xvnoy")
theme_override_font_sizes/font_size = 12
text = "0"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(600, 550)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -108.0
offset_right = 805.0
offset_bottom = 732.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_hyna8")
region_rect = Rect2(0, 0, 1024, 1024)
patch_margin_left = 256
patch_margin_top = 256
patch_margin_right = 256
patch_margin_bottom = 256
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
